--- a/src/app/portfolio/page.module.css
+++ b/src/app/portfolio/page.module.css
@@ -1,3 +1,48 @@
+.mainTitle{
+  font-size: 100px;
+}
 .container {
-  background-color:darkmagenta;
+}
+
+.selectTitle {
+  margin: 20px 0px;
+}
+
+.items{
+  display: flex;
+  gap: 50px;
+}
+
+.item{
+  border: 5px solid #bbb;
+  border-radius: 5px;
+  width: 300px;
+  height: 300px;
+  position: relative;
+  background-size: cover !important;
+}
+
+.item:nth-child(1){
+  background: url('/illustration.jpg');
+ }
+
+.item:nth-child(2){
+  background: url('/website.jpg');
+ }
+
+.item:nth-child(3){
+  background: url('/app.jpg');
+ }
+
+.title{
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  font-size: 40px;
+  font-weight: bold;
+  color: #42d383;
+}
+
+.item:hover .title{
+  color: #f53607;
 }
