--- a/src/app/blog/page.module.css
+++ b/src/app/blog/page.module.css
@@ -1,3 +1,23 @@
 .container {
-  background-color: chartreuse;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+.image{
+  object-fit: cover;
+}
+
+.content{
+
+}
+
+.title{
+  margin-bottom: 10px;
+}
+
+.desc{
+  font-size: 18px;
+  color: #999;
 }
